--- a/src/main/resources/co.edu.uniquindio.pr3.subastas/application/MiProductoView.fxml
+++ b/src/main/resources/co.edu.uniquindio.pr3.subastas/application/MiProductoView.fxml
@@ -9,12 +9,11 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="566.0" prefWidth="856.0" style="-fx-background-color: white;" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <TabPane layoutX="6.0" layoutY="6.0" prefHeight="566.0" prefWidth="856.0" style="-fx-background-color: white;" tabClosingPolicy="UNAVAILABLE" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
         <tabs>
-          <Tab text="Información producto">
+          <Tab fx:id="tabInformacionProducto" text="Información producto">
             <content>
               <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
                      <children>
@@ -61,7 +60,7 @@
                   </AnchorPane>
             </content>
           </Tab>
-          <Tab text="Mis Productos">
+          <Tab fx:id="tabMisProductos" text="Mis Productos">
             <content>
               <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
                      <children>
