--- a/src/main/resources/co.edu.uniquindio.pr3.subastas/application/RegistroView.fxml
+++ b/src/main/resources/co.edu.uniquindio.pr3.subastas/application/RegistroView.fxml
@@ -28,7 +28,7 @@
             <Image url="@../images/Martillo.jpeg" />
          </image>
       </ImageView>
-      <ComboBox layoutX="171.0" layoutY="137.0" prefHeight="25.0" prefWidth="166.0" />
+      <ComboBox fx:id="comboBoxTipoUsuario" layoutX="171.0" layoutY="137.0" prefHeight="25.0" prefWidth="166.0" />
       <Label layoutX="61.0" layoutY="141.0" text="Tipo de usuario" />
       <Label layoutX="63.0" layoutY="383.0" text="Correo:" />
       <Label layoutX="58.0" layoutY="425.0" text="Contraseña:" />
@@ -36,23 +36,23 @@
       <Label layoutX="63.0" layoutY="301.0" text="Edad:" />
       <Label layoutX="63.0" layoutY="230.0" text="Apellidos:" />
       <Label layoutX="63.0" layoutY="187.0" text="Nombre:" />
-      <Label layoutX="162.0" layoutY="66.0" text="Registrate">
+      <Label layoutX="166.0" layoutY="51.0" text="Registrate">
          <font>
             <Font name="Bell MT" size="18.0" />
          </font></Label>
       <Label layoutX="63.0" layoutY="267.0" text="Identificación:" />
-      <Button layoutX="151.0" layoutY="479.0" mnemonicParsing="false" style="-fx-background-color: #0697AE; -fx-cursor: hand;" text="Registrarse" textFill="WHITE" />
-      <TextField layoutX="171.0" layoutY="183.0" prefHeight="25.0" prefWidth="166.0" />
-      <TextField layoutX="171.0" layoutY="226.0" prefHeight="25.0" prefWidth="166.0" />
-      <TextField layoutX="171.0" layoutY="263.0" prefHeight="25.0" prefWidth="166.0" />
-      <TextField layoutX="171.0" layoutY="297.0" prefHeight="25.0" prefWidth="166.0" />
-      <TextField layoutX="171.0" layoutY="340.0" prefHeight="25.0" prefWidth="166.0" />
-      <TextField layoutX="171.0" layoutY="379.0" prefHeight="25.0" prefWidth="166.0" />
-      <TextField layoutX="171.0" layoutY="421.0" prefHeight="25.0" prefWidth="166.0" />
+      <Button fx:id="btnRegistrar" layoutX="151.0" layoutY="479.0" mnemonicParsing="false" onAction="#aniadirUsuario" style="-fx-background-color: #0697AE; -fx-cursor: hand;" text="Registrarse" textFill="WHITE" />
+      <TextField fx:id="txtNombre" layoutX="171.0" layoutY="183.0" prefHeight="25.0" prefWidth="166.0" />
+      <TextField fx:id="txtApellido" layoutX="171.0" layoutY="226.0" prefHeight="25.0" prefWidth="166.0" />
+      <TextField fx:id="txtIdentificacion" layoutX="171.0" layoutY="263.0" prefHeight="25.0" prefWidth="166.0" />
+      <TextField fx:id="txtEdad" layoutX="171.0" layoutY="297.0" prefHeight="25.0" prefWidth="166.0" />
+      <TextField fx:id="txtUsuario" layoutX="171.0" layoutY="340.0" prefHeight="25.0" prefWidth="166.0" />
+      <TextField fx:id="txtCorreo" layoutX="171.0" layoutY="379.0" prefHeight="25.0" prefWidth="166.0" />
+      <TextField fx:id="txtContrasenia" layoutX="171.0" layoutY="421.0" prefHeight="25.0" prefWidth="166.0" />
       <Label layoutX="52.0" layoutY="522.0" text="Si ya tienes una cuenta: " />
-      <Button layoutX="198.0" layoutY="518.0" mnemonicParsing="false" style="-fx-background-color: transparent; -fx-cursor: hand;" text="Iniciar sesión" textFill="#5900ff" />
+      <Button fx:id="btnInico" layoutX="198.0" layoutY="518.0" mnemonicParsing="false" onAction="#iniciarSesion" style="-fx-background-color: transparent; -fx-cursor: hand;" text="Iniciar sesión" textFill="#5900ff" />
       <Separator layoutX="37.0" layoutY="461.0" prefHeight="2.0" prefWidth="318.0" />
-      <Label layoutX="111.0" layoutY="86.0" text="De una manera muy facil y sencilla" />
+      <Label layoutX="113.0" layoutY="81.0" text="De una manera muy facil y sencilla" />
       <Separator layoutX="26.0" layoutY="112.0" prefHeight="3.0" prefWidth="312.0" />
    </children>
 </AnchorPane>
