--- a/src/main/resources/co.edu.uniquindio.pr3.subastas/application/MiCuentaView.fxml
+++ b/src/main/resources/co.edu.uniquindio.pr3.subastas/application/MiCuentaView.fxml
@@ -8,8 +8,7 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="556.0" prefWidth="855.0" style="-fx-background-color: white;" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="556.0" prefWidth="855.0" style="-fx-background-color: white;" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="co.edu.uniquindio.pr3.subastas.viewControllers.MiCuentaViewController">
    <children>
       <Pane prefHeight="68.0" prefWidth="855.0" style="-fx-background-color: #0697AE;" />
       <ImageView fitHeight="150.0" fitWidth="200.0" layoutX="113.0" layoutY="177.0" pickOnBounds="true" preserveRatio="true">
@@ -34,26 +33,26 @@
             <Font size="16.0" />
          </font>
       </Label>
-      <TextField layoutX="579.0" layoutY="173.0" prefHeight="25.0" prefWidth="230.0" />
-      <TextField layoutX="579.0" layoutY="208.0" prefHeight="25.0" prefWidth="230.0" />
-      <TextField layoutX="579.0" layoutY="244.0" prefHeight="25.0" prefWidth="230.0" />
-      <TextField layoutX="579.0" layoutY="279.0" prefHeight="25.0" prefWidth="230.0" />
-      <TextField layoutX="579.0" layoutY="315.0" prefHeight="25.0" prefWidth="230.0" />
-      <TextField layoutX="579.0" layoutY="355.0" prefHeight="25.0" prefWidth="230.0" />
-      <PasswordField layoutX="579.0" layoutY="397.0" prefHeight="25.0" prefWidth="230.0" />
-      <Button layoutX="208.0" layoutY="489.0" mnemonicParsing="false" prefHeight="33.0" prefWidth="150.0" style="-fx-background-color: #0697AE;" text="Actualizar informacion" textFill="WHITE">
+      <TextField fx:id="txtNombre" layoutX="579.0" layoutY="173.0" prefHeight="25.0" prefWidth="230.0" />
+      <TextField fx:id="txtApellidos" layoutX="579.0" layoutY="208.0" prefHeight="25.0" prefWidth="230.0" />
+      <TextField fx:id="txtEdad" layoutX="579.0" layoutY="244.0" prefHeight="25.0" prefWidth="230.0" />
+      <TextField fx:id="txtIdentificacion" layoutX="579.0" layoutY="279.0" prefHeight="25.0" prefWidth="230.0" />
+      <TextField fx:id="txtUsuario" layoutX="579.0" layoutY="315.0" prefHeight="25.0" prefWidth="230.0" />
+      <TextField fx:id="txtCorreo" layoutX="579.0" layoutY="355.0" prefHeight="25.0" prefWidth="230.0" />
+      <PasswordField fx:id="txtContrasenia" layoutX="579.0" layoutY="397.0" prefHeight="25.0" prefWidth="230.0" />
+      <Button fx:id="btnActualizarInformacion" layoutX="208.0" layoutY="489.0" mnemonicParsing="false" onAction="#actualizarUsuario" prefHeight="33.0" prefWidth="150.0" style="-fx-background-color: #0697AE;" text="Actualizar informacion" textFill="WHITE">
          <font>
             <Font size="13.0" />
          </font>
       </Button>
-      <ComboBox layoutX="174.0" layoutY="364.0" prefHeight="25.0" prefWidth="178.0" />
+      <ComboBox fx:id="comboBoxTipoUsuario" layoutX="174.0" layoutY="364.0" prefHeight="25.0" prefWidth="178.0" />
       <Separator layoutX="47.0" layoutY="464.0" prefHeight="7.0" prefWidth="800.0" />
-      <Button layoutX="422.0" layoutY="489.0" mnemonicParsing="false" prefHeight="33.0" prefWidth="111.0" style="-fx-background-color: red;" text="Cerrar Sesión" textFill="WHITE">
+      <Button fx:id="btnCerrarSesion" layoutX="422.0" layoutY="489.0" mnemonicParsing="false" onAction="#cerrarSesion" prefHeight="33.0" prefWidth="111.0" style="-fx-background-color: red;" text="Cerrar Sesión" textFill="WHITE">
          <font>
             <Font size="13.0" />
          </font>
       </Button>
-      <Button layoutX="585.0" layoutY="489.0" mnemonicParsing="false" prefHeight="33.0" prefWidth="111.0" style="-fx-background-color: red;" text="Eliminar cuenta" textFill="WHITE">
+      <Button fx:id="btnEliminarCuenta" layoutX="585.0" layoutY="489.0" mnemonicParsing="false" onAction="#eliminarUsuario" prefHeight="33.0" prefWidth="111.0" style="-fx-background-color: red;" text="Eliminar cuenta" textFill="WHITE">
          <font>
             <Font size="13.0" />
          </font>
