--- a/src/main/resources/co.edu.uniquindio.pr3.subastas/application/RegistroView.fxml
+++ b/src/main/resources/co.edu.uniquindio.pr3.subastas/application/RegistroView.fxml
@@ -9,7 +9,7 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="575.0" prefWidth="860.0" style="-fx-background-color: white;" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="575.0" prefWidth="860.0" style="-fx-background-color: white;" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="co.edu.uniquindio.pr3.subastas.viewControllers.RegistroViewController">
    <children>
       <Pane prefHeight="50.0" prefWidth="855.0" style="-fx-background-color: #0697AE;">
          <opaqueInsets>
@@ -35,20 +35,26 @@
       <Label layoutX="63.0" layoutY="344.0" text="Usuario:" />
       <Label layoutX="63.0" layoutY="301.0" text="Edad:" />
       <Label layoutX="63.0" layoutY="230.0" text="Apellidos:" />
-      <Label layoutX="63.0" layoutY="187.0" text="Nombre:" />
+      <Label layoutX="63.0" layoutY="187.0" text="Nombre(s):" />
       <Label layoutX="166.0" layoutY="51.0" text="Registrate">
          <font>
             <Font name="Bell MT" size="18.0" />
          </font></Label>
       <Label layoutX="63.0" layoutY="267.0" text="Identificación:" />
       <Button fx:id="btnRegistrar" layoutX="151.0" layoutY="479.0" mnemonicParsing="false" onAction="#aniadirUsuario" style="-fx-background-color: #0697AE; -fx-cursor: hand;" text="Registrarse" textFill="WHITE" />
-      <TextField fx:id="txtNombre" layoutX="171.0" layoutY="183.0" prefHeight="25.0" prefWidth="166.0" />
-      <TextField fx:id="txtApellido" layoutX="171.0" layoutY="226.0" prefHeight="25.0" prefWidth="166.0" />
-      <TextField fx:id="txtIdentificacion" layoutX="171.0" layoutY="263.0" prefHeight="25.0" prefWidth="166.0" />
-      <TextField fx:id="txtEdad" layoutX="171.0" layoutY="297.0" prefHeight="25.0" prefWidth="166.0" />
-      <TextField fx:id="txtUsuario" layoutX="171.0" layoutY="340.0" prefHeight="25.0" prefWidth="166.0" />
-      <TextField fx:id="txtCorreo" layoutX="171.0" layoutY="379.0" prefHeight="25.0" prefWidth="166.0" />
-      <TextField fx:id="txtContrasenia" layoutX="171.0" layoutY="421.0" prefHeight="25.0" prefWidth="166.0" />
+      <TextField fx:id="txtNombre" layoutX="171.0" layoutY="183.0" prefHeight="25.0" prefWidth="166.0" promptText="Ingrese su (s) nombre (s)" />
+      <TextField fx:id="txtApellido" layoutX="171.0" layoutY="226.0" prefHeight="25.0" prefWidth="166.0" promptText="Ingrese sus apellidos " />
+      <TextField fx:id="txtIdentificacion" layoutX="171.0" layoutY="263.0" prefHeight="25.0" prefWidth="166.0" promptText="Ingrese su identificación" />
+      <TextField fx:id="txtEdad" layoutX="171.0" layoutY="297.0" prefHeight="25.0" prefWidth="166.0" promptText="Ingrese su edad" />
+      <TextField fx:id="txtUsuario" layoutX="171.0" layoutY="340.0" prefHeight="25.0" prefWidth="166.0" promptText="Ingrese un nombre de usuario">
+         <font>
+            <Font size="11.0" />
+         </font></TextField>
+      <TextField fx:id="txtCorreo" layoutX="171.0" layoutY="379.0" prefHeight="25.0" prefWidth="166.0" promptText="Ingrese un correo electronico">
+         <font>
+            <Font size="11.0" />
+         </font></TextField>
+      <TextField fx:id="txtContrasenia" layoutX="171.0" layoutY="421.0" prefHeight="25.0" prefWidth="166.0" promptText="Digite una contraseña" />
       <Label layoutX="52.0" layoutY="522.0" text="Si ya tienes una cuenta: " />
       <Button fx:id="btnInico" layoutX="198.0" layoutY="518.0" mnemonicParsing="false" onAction="#iniciarSesion" style="-fx-background-color: transparent; -fx-cursor: hand;" text="Iniciar sesión" textFill="#5900ff" />
       <Separator layoutX="37.0" layoutY="461.0" prefHeight="2.0" prefWidth="318.0" />
