--- a/src/main/resources/co.edu.uniquindio.pr3.subastas/application/VentanaPrincipalView.fxml
+++ b/src/main/resources/co.edu.uniquindio.pr3.subastas/application/VentanaPrincipalView.fxml
@@ -17,15 +17,15 @@
             <content>
               <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
                      <children>
-                        <TabPane layoutX="14.0" layoutY="20.0" prefHeight="585.0" prefWidth="803.0" tabClosingPolicy="UNAVAILABLE" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
-                          <tabs>
-                            <Tab text="Anuncios">
-                              <content>
-                                <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
-                              </content>
-                            </Tab>
-                          </tabs>
-                        </TabPane>
+                        <Pane layoutX="-15.0" prefHeight="75.0" prefWidth="818.0" style="-fx-background-color: #0697AE;">
+                           <children>
+                              <Label layoutX="291.0" layoutY="9.0" text="Subastas Uniquindio" textFill="WHITE">
+                                 <font>
+                                    <Font name="Bernard MT Condensed" size="47.0" />
+                                 </font>
+                              </Label>
+                           </children>
+                        </Pane>
                      </children>
                   </AnchorPane>
             </content>
@@ -36,36 +36,12 @@
                      <children>
                         <TabPane prefHeight="585.0" prefWidth="803.0" tabClosingPolicy="UNAVAILABLE" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                           <tabs>
-                            <Tab text="Iniciar sesión">
-                              <content>
-                                <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
-                              </content>
-                            </Tab>
-                              <Tab text="Registro">
-                                <content>
-                                  <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
-                                </content>
-                              </Tab>
-                              <Tab text="Mi cuenta">
-                                <content>
-                                  <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
-                                </content>
-                              </Tab>
-                              <Tab text="Mis anuncios">
-                                <content>
-                                  <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
-                                </content>
-                              </Tab>
-                              <Tab text="Mis pujas">
-                                 <content>
-                                    <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
-                                 </content>
-                              </Tab>
-                              <Tab text="Mis productos">
-                                 <content>
-                                    <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
-                                 </content>
-                              </Tab>
+                            <Tab fx:id="ttabIniciarSesion" text="Iniciar sesión" />
+                              <Tab fx:id="tabRegistro" text="Registro" />
+                              <Tab fx:id="tabMiCuenta" text="Mi cuenta" />
+                              <Tab fx:id="tabMisAnuncios" text="Mis anuncios" />
+                              <Tab fx:id="tabMisPujas" text="Mis pujas" />
+                              <Tab fx:id="tabMisProductos" text="Mis productos" />
                           </tabs>
                         </TabPane>
                      </children>
