Se han organizado los tamaños de las ventanas

--- a/src/main/resources/co.edu.uniquindio.pr3.subastas/application/VentanaPrincipalView.fxml
+++ b/src/main/resources/co.edu.uniquindio.pr3.subastas/application/VentanaPrincipalView.fxml
@@ -9,7 +9,7 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="614.0" prefWidth="803.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="co.edu.uniquindio.pr3.subastas.viewControllers.VentanaPrincipalViewController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="607.0" prefWidth="885.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="co.edu.uniquindio.pr3.subastas.viewControllers.VentanaPrincipalViewController">
    <children>
       <TabPane layoutX="14.0" layoutY="22.0" prefHeight="614.0" prefWidth="803.0" tabClosingPolicy="UNAVAILABLE" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
         <tabs>
@@ -17,7 +17,7 @@
             <content>
               <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
                      <children>
-                        <Pane layoutX="-15.0" prefHeight="75.0" prefWidth="818.0" style="-fx-background-color: #0697AE;">
+                        <Pane layoutX="-15.0" prefHeight="75.0" prefWidth="901.0" style="-fx-background-color: #0697AE;">
                            <children>
                               <Label layoutX="291.0" layoutY="9.0" text="Subastas Uniquindio" textFill="WHITE">
                                  <font>
@@ -31,48 +31,48 @@
             </content>
           </Tab>
             <Tab fx:id="usuarioTab" text="Usuario">
-                <fx:include source="UsuarioView.fxml" />
-                <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
-                    <children>
-                          <TabPane prefHeight="585.0" prefWidth="803.0" tabClosingPolicy="UNAVAILABLE"
-                                   AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0"
-                                   AnchorPane.topAnchor="0.0">
-                              <tabs>
-                                  <Tab fx:id="ttabIniciarSesion" text="Iniciar sesión">
-                                      <content>
-                                          <fx:include source="InicioSesionView.fxml"/>
-                                      </content>
-                                  </Tab>
-
-                                  <Tab fx:id="tabRegistro" text="Registro">
-                                      <content>
-                                          <fx:include source="RegistroView.fxml"/>
-                                      </content>
-                                  </Tab>
-                                  <Tab fx:id="tabMiCuenta" text="Mi cuenta">
-                                      <content>
-                                          <fx:include source="MiCuentaView.fxml"/>
-                                      </content>
-                                  </Tab>
-                                  <Tab fx:id="tabMisAnuncios" text="Mis anuncios">
-                                      <content>
-                                          <fx:include source="MiAnuncioView.fxml"/>
-                                      </content>
-                                  </Tab>
-                                  <Tab fx:id="tabMisPujas" text="Mis pujas">
-                                      <content>
-                                          <fx:include source="MiPujaView.fxml"/>
-                                      </content>
-                                  </Tab>
-                                  <Tab fx:id="tabMisProductos" text="Mis productos">
-                                      <content>
-                                          <fx:include source="MiProductoView.fxml"/>
-                                      </content>
-                                  </Tab>
-                              </tabs>
-                          </TabPane>
-                    </children>
-                </AnchorPane>
+               <content>
+                   <fx:include source="UsuarioView.fxml" />
+                   <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
+                       <children>
+                             <TabPane prefHeight="585.0" prefWidth="803.0" tabClosingPolicy="UNAVAILABLE" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                                 <tabs>
+                                     <Tab fx:id="ttabIniciarSesion" text="Iniciar sesión">
+                                         <content>
+                                             <fx:include source="InicioSesionView.fxml" />
+                                         </content>
+                                     </Tab>
+   
+                                     <Tab fx:id="tabRegistro" text="Registro">
+                                         <content>
+                                             <fx:include source="RegistroView.fxml" />
+                                         </content>
+                                     </Tab>
+                                     <Tab fx:id="tabMiCuenta" text="Mi cuenta">
+                                         <content>
+                                             <fx:include source="MiCuentaView.fxml" />
+                                         </content>
+                                     </Tab>
+                                     <Tab fx:id="tabMisAnuncios" text="Mis anuncios">
+                                         <content>
+                                             <fx:include source="MiAnuncioView.fxml" />
+                                         </content>
+                                     </Tab>
+                                     <Tab fx:id="tabMisPujas" text="Mis pujas">
+                                         <content>
+                                             <fx:include source="MiPujaView.fxml" />
+                                         </content>
+                                     </Tab>
+                                     <Tab fx:id="tabMisProductos" text="Mis productos">
+                                         <content>
+                                             <fx:include source="MiProductoView.fxml" />
+                                         </content>
+                                     </Tab>
+                                 </tabs>
+                             </TabPane>
+                       </children>
+                   </AnchorPane>
+               </content>
             </Tab>
         </tabs>
       </TabPane>
