--- a/src/main/resources/co/edu/uniquindio/pr3/subastas/application/UsuarioView.fxml
+++ b/src/main/resources/co/edu/uniquindio/pr3/subastas/application/UsuarioView.fxml
@@ -6,34 +6,39 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="578.0" prefWidth="976.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="578.0" prefWidth="976.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="co.edu.uniquindio.pr3.subastas.viewControllers.UsuarioViewController">
    <children>
       <TabPane prefHeight="578.0" prefWidth="976.0" tabClosingPolicy="UNAVAILABLE" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
         <tabs>
           <Tab fx:id="inicioSesionTab" text="Iniciar sesion">
-              <fx:include source="InicioSesionView.fxml" />
-
+             <content>
+                 <fx:include source="InicioSesionView.fxml" />
+             </content>
           </Tab>
           <Tab fx:id="registroTab" text="Registro">
-              <fx:include source="RegistroView.fxml" />
-
+             <content>
+                 <fx:include source="RegistroView.fxml" />
+             </content>
           </Tab>
             <Tab fx:id="miCuentaTab" text="Mi cuenta">
-                <fx:include source="MiCuentaView.fxml" />
-
+               <content>
+                   <fx:include source="MiCuentaView.fxml" />
+               </content>
             </Tab>
             <Tab fx:id="misAnunciosTab" text="Mis anuncios">
-                <fx:include source="MiAnuncioView.fxml" />
-
+               <content>
+                   <fx:include source="MiAnuncioView.fxml" />
+               </content>
             </Tab>
             <Tab fx:id="misPujasTab" text="Mis pujas">
-                <fx:include source="MiPujaView.fxml" />
-
+               <content>
+                   <fx:include source="MiPujaView.fxml" />
+               </content>
             </Tab>
             <Tab fx:id="misProductosTab" text="Mis productos">
-                <fx:include source="MiProductoView.fxml"/>
-
+               <content>
+                   <fx:include source="MiProductoView.fxml" />
+               </content>
             </Tab>
         </tabs>
       </TabPane>
