--- a/src/main/resources/co/edu/uniquindio/pr3/subastas/application/CompradorView.fxml
+++ b/src/main/resources/co/edu/uniquindio/pr3/subastas/application/CompradorView.fxml
@@ -8,26 +8,19 @@
 <?import javafx.scene.control.Tab?>
 <?import javafx.scene.control.TabPane?>
 <?import javafx.scene.control.TextField?>
-<?import javafx.scene.image.Image?>
-<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="607.0" prefWidth="885.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="co.edu.uniquindio.pr3.subastas.viewControllers.VentanaPrincipalViewController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="607.0" prefWidth="885.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="co.edu.uniquindio.pr3.subastas.viewControllers.CompradorViewController">
    <children>
       <TabPane layoutX="14.0" layoutY="22.0" prefHeight="614.0" prefWidth="803.0" tabClosingPolicy="UNAVAILABLE" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <tabs>
-            <Tab text="Mi cuenta">
+            <Tab fx:id="tabMicuenta" text="Mi cuenta">
                <content>
                   <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="577.0" prefWidth="885.0" style="-fx-background-color: white;">
                      <children>
                         <Pane prefHeight="68.0" prefWidth="885.0" style="-fx-background-color: #0697AE;" />
-                        <ImageView fitHeight="150.0" fitWidth="200.0" layoutX="113.0" layoutY="177.0" pickOnBounds="true" preserveRatio="true">
-                           <image>
-                              <Image url="@../../../../../../co.edu.uniquindio.pr3.subastas/images/LogoUsuario.png" />
-                           </image>
-                        </ImageView>
                         <Label layoutX="37.0" layoutY="77.0" text="Información de la cuenta">
                            <font>
                               <Font size="33.0" />
@@ -74,7 +67,7 @@
                   </AnchorPane>
                </content>
             </Tab>
-            <Tab text="Mis pujas">
+            <Tab fx:id="tabMisPujas" text="Mis pujas">
               <content>
                 <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
               </content>
